# GraphSD

./: .gitignore  LICENSE  README.md  ad1_SD.py  benchmark.py  digraph_example.py  example.ipynb  graphsd_demo.ipynb  outlier_sd_playgroundA.py  playgroundB_qPM.py  pyproject.toml  qPD_example.py  qPD_metrics_example.py  qPD_signed_example.py  qPM_example.py  qPM_metrics_example.py  qSD_between_example.py  qSD_example.py  qSD_signed_example.py  qSM_example.py  qSM_signed_example.py  requirements.txt  setup.cfg  setup.py
demos/: graphsd_demo.ipynb  voronoi_lof_outlier_demo.ipynb
graphSD/: benchmark_graph.py  dicts.py  functions.py  graph.py  outlier.py  sd.py  utils.py  viz.py
graphsd/: __init__.py  _version.py  graph.py  mining.py  outlier.py  patterns.py  sd.py  subgroup.py  utils.py  viz.py
graphsd/datasets/: __init__.py  _base.py  benchmark_graph.py
graphsd/datasets/data/: playground_a_position_data_anonymized.csv  playground_a_social_data_anonymized.csv
scripts/: ad1_Multigraph.py  ad1_SD.py  digraphsd_run.py  lof_voronoi_run.py  outlier_sd_playgroundA.py  playgroundB_qPD_metrics.py  playgroundB_qSD_metrics.py  qPD_example.py  qPM_example.py  qPM_metrics_example.py  qSD_example.py  qSM_example.py
scripts/old_scripts/: outlier_sd.py  qPM_signed_example.py  qSD_signed_example.py  qSM_example_between.py
